# virufy-ai-frontend

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
acoustic_sandbox/: __init__.py  api.py  audio.py  cli.py  config.py  errors.py  model.py  synthetic.py
acoustic_sandbox/static/: app.js  index.html  styles.css
backend/: app.py
docs/: ARCHITECTURE.md  DATA_RIGHTS.md  MODEL_CARD.md  PRIVACY_AND_SECURITY.md
examples/: README.md  generate_synthetic_fixtures.py
frontend/: styles.css
frontend/public/: index.html
legacy/: README.md
legacy/original/frontend/: app.js  index.html
legacy/original/frontend/src/: App.css  App.js
legacy/original/model/: predict.py  preprocess.py
model/: predict.py  training.py
tests/: test_api.py  test_audio.py  test_cli.py  test_model.py
